Bug 478948 - Panel no longer defloats correctly
Summary: Panel no longer defloats correctly
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Compiled Sources Linux
: NOR major
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6, regression
: 479059 479393 479650 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-23 18:00 UTC by Prajna Sariputra
Modified: 2024-01-11 16:15 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments
Recording of how a bottom panel defloats now (76.99 KB, video/webm)
2023-12-23 18:00 UTC, Prajna Sariputra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Prajna Sariputra 2023-12-23 18:00:46 UTC
Created attachment 164408 [details]
Recording of how a bottom panel defloats now

SUMMARY
With latest git master everything, the panel no longer defloats correctly on my system. A bottom panel just moves towards the bottom left, a right panel moves towards the top right, and a top panel as well as a left panel moves towards the top left.

A git bisect returns commit 6feb67b9fd1148634c022a87062c20a7955c1ac9 (Let the compositor size space filling panels) in plasma-workspace as the first bad commit, and reverting that commit on top of master fixes the issue for me.


STEPS TO REPRODUCE
1. Update to latest git master
2. Have a floating panel (at least bottom or top)
3. Open and maximise a window or move it so it touches the panel

OBSERVED RESULT
The panel does not defloat correctly.

EXPECTED RESULT
The panel defloats correctly.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1
Kernel Version: 6.6.7-arch1-1 (64-bit)
Graphics Platform: Wayland
Comment 1 guimarcalsilva 2023-12-24 23:03:41 UTC
I can confirm this is happening on the latest Neon Unstable version.
Comment 2 Oded Arbel 2024-01-02 22:01:00 UTC
This seems the same issue as bug #479059
Comment 3 guimarcalsilva 2024-01-03 04:25:02 UTC
*** Bug 479059 has been marked as a duplicate of this bug. ***
Comment 4 Nicolas Fella 2024-01-04 14:01:51 UTC
*** Bug 479393 has been marked as a duplicate of this bug. ***
Comment 5 David Redondo 2024-01-09 08:25:11 UTC
Git commit ee5edafe5d10a2a8f691ced60425503bbbed3c52 by David Redondo.
Committed on 09/01/2024 at 09:07.
Pushed by davidre into branch 'master'.

panelview: Only set a margin on edge where the panel is on

This matches what is done on X11 and fixes wrong defloating in
case of space filling panels and panels anchored into a corner
which from looking at the code had the same preexisting issue.
FIXED-IN:6.0

M  +5    -5    shell/panelview.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/ee5edafe5d10a2a8f691ced60425503bbbed3c52
Comment 6 Nate Graham 2024-01-11 16:15:48 UTC
*** Bug 479650 has been marked as a duplicate of this bug. ***