panelview: Only set a margin on edge where the panel is on

This matches what is done on X11 and fixes wrong defloating in
case of space filling panels and panels anchored into a corner
which from looking at the code had the same preexisting issue.
BUG:478948
FIXED-IN:6.0